--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-12-14T20:10:59.422158Z",
@@ -46,7 +46,7 @@
     "import seaborn as sns\n",
     "import os\n",
     "\n",
-    "# Set professional plot style\n",
+    "# Set plot style\n",
     "sns.set_theme(style='whitegrid', context='notebook', palette='muted')\n",
     "plt.rcParams['figure.figsize'] = (14, 7)\n",
     "plt.rcParams['axes.titlesize'] = 16\n",
@@ -962,7 +962,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv (3.13.3)",
    "language": "python",
    "name": "python3"
   },
